# odoo-backup-db-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: misspell.yml  test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
odoo_backup_db_cli/: cli.py  db_backup.py  utils.py
odoo_backup_db_cli/protocols/: common.py  ftp.py  local.py  s3.py  sftp.py
tests/cli/: test_create_backup.py  test_generate_common_config.py  test_update_config.py
tests/db_backup/: test_dump_db.py  test_dump_filestore.py
tests/protocols/ftp/: test_ftp_delete_old_backups.py  test_ftp_handler.py  test_ftp_mk_dirs.py  test_ftp_save_db.py  test_ftp_save_filestore.py
tests/protocols/local/: test_local_delete_old_backups.py  test_local_handler.py  test_local_save_db.py  test_local_save_filestore.py
tests/protocols/sftp/: test_sftp_delete_old_backups.py  test_sftp_handler.py  test_sftp_save_db.py  test_sftp_save_filestore.py
tests/utils/: test_check_config.py  test_write_config_file.py
