[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "odoo-backup-db-cli"
description = "Tool to create full backup of odoo database"
version = "1.0.0"
license = "AGPL3"

authors = [
  "VentorTech OU <hello@ventor.tech>"
]

readme = "README.md"

repository = "https://github.com/ventor-tech/odoo-backup-db-cli"

keywords = ["odoo", "backup", "filestore", "cli"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
poetry = "poetry.console:run"
odoo-backup-db-cli = "odoo_backup_db_cli.cli:main"

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
python-dateutil = "^2.8"
pysftp = "^0.2.9"
yaspin =  "^1.2.0"
importlib-metadata = "1.7.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14"
flake8-pytest-style = "^1.3"
nitpick = "^0.23"

safety = "^1.9"

pytest = "^5.4"
pytest-cov = "^2.10"
mock = "^4.0.3"
pytest-randomly = "^3.4"

sphinx = "^3.3"
sphinx-autodoc-typehints = "^1.11"
doc8 = "^0.8"
m2r2 = "^0.2"
tomlkit = "^0.7"
